<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_positions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.positions.PositionsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_positions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/layout_positions_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_positions_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView_positions">

        <EditText
            android:id="@+id/text_position_name"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/my_border"
            android:gravity="start|center_vertical"
            android:hint="@string/hint_position_name"
            android:inputType="text"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_position_cost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/text_position_cost"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/my_border"
            android:gravity="center_vertical|end"
            android:hint="@string/hint_position_cost"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/currency_cost"
            app:layout_constraintStart_toEndOf="@id/text_position_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/currency_cost"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:gravity="start|center_vertical"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_position_create"
            app:layout_constraintStart_toEndOf="@id/text_position_cost"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_position_create"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/label_button_create"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/currency_cost"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>